# nate_ntm

./: .gitignore  AGENTS_MK2.md  AGENT_EVENT_REFACTOR.md  AGENT_EVENT_REFACTOR_PLAN_v1.md  AGENT_EVENT_REFACTOR_PLAN_v2.md  API.md  CONOP_NATEOHAv2.md  CONOP_NATEOHAv2_FEEDBACK.md  ConfigOverhaul.md  FEEDBACK4.md  README.md  TUI_CONOP.md  nate_quickstart.sh  pyproject.toml
.specify/: feature.json
nate-oha-profiles/: profile1.json
specs/001-swarm-runtime-orchestrator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-swarm-runtime-orchestrator/checklists/: requirements.md
specs/001-swarm-runtime-orchestrator/contracts/: runtime-api.md
specs/002-nate-oha-acp-adapter/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-nate-oha-acp-adapter/contracts/: nate_oha_process_launch.md
specs/003-textual-runtime-console/: quickstart.md  tasks.md
specs/003-textual-runtime-console/checklists/: requirements.md
specs/004-acp-transcript-infrastructure/: spec.md
specs/005-nate-oha-migration/: bonus-1.md  plan.md  spec-appendix-A.md  spec-appendix-B.md  spec-appendix-C.md  spec.md  tasks.md
specs/006-managed-swarm-runtime/: CONOP_EPIC_006.md
specs/007-config-overhaul/: ConfigOverhaul_ms2.md
specs/008-agent-event-refactor/: ACP_SESSION_UPDATE_STREAM.md  AGENT_EVENT_REFACTOR_PLAN_v2.md
specs/009-swarm-acp-mux/: REPORT_1.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/nate_ntm/: __init__.py  cli.py
tests/: __init__.py
tests/e2e/: test_real_runtime_nate_oha_agent_mail.py
tests/integration/: __init__.py
tests/unit/: __init__.py
(+90 files in other folders)
