[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[project]
name = "nate_ntm"
version = "0.1.0"
description = "A python module"
readme = "README.md"
requires-python = ">=3.12,<3.14.1"
authors = [
  { name = "Nathan Nichols", email = "communications@resultsmotivated.com" },
]
dependencies = [
    "typer>=0.26.8",
    "websockets>=12,<13",
    "python-dotenv>=1,<2",
    "uvicorn[standard]>=0.50.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "fastapi>=0.139.0",
    "starlette>=1.3.1",
    "fastapi-jsonrpc>=3.5.0",
    "textual>=8.2.8",
]

[project.scripts]
nate-ntm = "nate_ntm.cli:cli"

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "black>=24.4.2,<25",
  "basedpyright>=1.31.5,<2",
  "ruff>=0.13.2,<0.14",
  "pytest-asyncio>=1.4.0",
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
# Restrict test discovery to the main project test suite to avoid
# running vendored reference tests (for example reference/mcp_agent_mail),
# which have their own dependency graph and configuration.
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]

[tool.pyright]
typeCheckingMode = "off"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportUnknownParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUntypedFunctionDecorator = "none"

[tool.ruff]
lint.select = [
  "F401",
]
fix = true
src = ["src", "tests"]
